--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <jackson.datatype.version>2.17.0</jackson.datatype.version>
         <allure.rest.assured.version>2.27.0</allure.rest.assured.version>
         <junit.jupiter.version>5.10.2</junit.jupiter.version>
+        <log4j.version>2.20.0</log4j.version>
     </properties>
 
     <dependencyManagement>
@@ -79,6 +80,11 @@
         <dependency>
             <groupId>io.qameta.allure</groupId>
             <artifactId>allure-rest-assured</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>${log4j.version}</version>
         </dependency>
     </dependencies>
 
