Работа над ошибками

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,21 @@
 base-url = https://petstore.swagger.io/v2
+
+pet-id = 71071071
+
+#CATEGORY-PET
+category-id = 0
+update-category-id = 1
+
+category-name = cat
+update-category-name = sphinx
+
+#TAG-PET
+tag-id = 0
+update-tag-id = 1
+
+tag-name = black
+update-tag-name = without fur
+
+#NAME-PET
+pet-name = KENSEY
+update-pet-name = MIKASA
