--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
         <junit.jupiter.version>5.10.2</junit.jupiter.version>
         <slf4j.version>2.0.13</slf4j.version>
         <logback.version>1.5.5</logback.version>
+        <json-schema-validator.version>4.3.0</json-schema-validator.version>
     </properties>
 
     <dependencies>
@@ -75,6 +76,12 @@
             <artifactId>junit-jupiter-api</artifactId>
             <version>${junit.jupiter.version}</version>
             <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.rest-assured</groupId>
+            <artifactId>json-schema-validator</artifactId>
+            <version>${json-schema-validator.version}</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
